# ConverterOfAsphericSurfaces

./: AsphericSurface.cpp  CMakeLists.txt  Help.htm  README.md  help.cpp  help.ui  inverse.h  mainwindow.h
Help.files/: filelist.xml  image001.wmz  image003.wmz  image005.wmz  image007.wmz  image009.wmz  image011.wmz  image013.wmz  image015.wmz  image017.wmz  image019.wmz  image021.wmz  image023.wmz  image025.wmz  image027.wmz  oledata.mso  props048.xml
src/: AsphericSurface.h  Converter.cpp  Converter.h  help.h  main.cpp  mainWindow.ui  mainwindow.cpp
